<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My12306</string>
    <string name="login_dl">登录</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="ReLogin">自动登录</string>
    <string name="FoLogin">忘记密码？</string>
    <string-array name="list_view_my">
        <item>我的联系人</item>
        <item>我的账户</item>
        <item>我的密码</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>






    <string name="info">zzzzzzzzzzzzzzzzzzzzzzzzzzzz</string>





</resources>
